Edited code so user cannot continue a failed game

--- a/public/index.html
+++ b/public/index.html
@@ -132,6 +132,9 @@
             playFail();
             $(".status").html("Oops!");
             $(".status2").html(" Try Again");
+            sequence = [];
+            sequenceIndexCheck = 0;
+            gameNum = 0;
         }
     });
 
